refactored some list items

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,9 @@
     .icon {
         @apply w-6 h-6 fill-current text-primary-purple hover:text-primary-lightPurple hover:scale-105 transition-all ease-in-out duration-300;
     }
+    .icon-lg {
+        @apply w-8 h-8 fill-current text-primary-purple hover:text-primary-lightPurple hover:scale-105 transition-all ease-in-out duration-300;
+    }
 
     .form-input {
         @apply bg-transparent border border-primary-purple rounded-sm w-full outline-none focus:border-primary-yellow p-2 transition-all duration-500 ease-in;
