--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,10 @@
         @apply w-8 h-8 fill-current text-primary-purple hover:text-primary-lightPurple hover:scale-105 transition-all ease-in-out duration-300;
     }
 
+    .icon-eye {
+        @apply w-auto h-10 fill-current text-primary-purple hover:text-primary-lightPurple hover:scale-105 transition-all ease-in-out duration-300;
+    }
+
     .form-input {
         @apply bg-transparent border border-primary-purple rounded-sm w-full outline-none focus:border-primary-yellow p-2 transition-all duration-500 ease-in;
     }
